--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,8 @@ repositories {
 
 dependencies {
     compile group: 'io.netty', name: 'netty-all', version: '5.0.0.Alpha1'
-    
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+    compile group: 'org.projectlombok', name: 'lombok', version: '1.18.6'
     
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
